# ChessGame-AI

./: CMakeLists.txt  Carla.txt  Ioana.md  README-Agatha.md  README.md  activitylog_RA  algo.cpp  algo.h  castling.cpp  check.cpp  chess_board.cpp  chess_board.h  en_passant.cpp  main.cpp  piece.cpp  piece.h  promotion.cpp  promotion_old.cpp  reading.cpp  reading.h  ritthigaa.txt
